Add some comments in Dockerfiles

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,3 +1,6 @@
 FROM debian:jessie
 
+MAINTAINER Arnaud Baali
+
+# Define the path on every other containers you want to share with
 VOLUME /var/www/symfony
